push docker image and docker compose